# argus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  RELEASING.md  install.sh
.github/workflows/: ci.yml  pages.yml  release.yml
benchmarks/: README.md  demo.tape  reliability.json  run-benchmark.sh
benchmarks/cases/edge-parse/: parse.py  test_parse.py
benchmarks/cases/fix-fibonacci/: fib.py  test_fib.py
benchmarks/cases/impl-isprime/: is_prime.py  test_is_prime.py
benchmarks/results/: deepseek-v4-pro-2026-06-30.md
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: background.rs  checkpoints.rs  cockpit.rs  compatibility.rs  config.rs  diff.rs  eval_dashboard.rs  eval_runner.rs  harness.rs  launch.rs  lib.rs  main.rs  memory.rs  plans.rs  project.rs  repair.rs  repo_map.rs  review.rs  route_runner.rs  sessions.rs  tasks.rs  trace_view.rs  tui.rs  verify.rs  workbench.rs  workflow.rs  workspace_filter.rs
crates/argus-cli/tests/: cli.rs  release.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: agent.rs  anthropic.rs  approver.rs  command.rs  cost.rs  eval.rs  lib.rs  mcp.rs  openai.rs  policy.rs  provider.rs  router.rs  tool.rs  types.rs  verifier.rs
crates/argus-trace/: Cargo.toml
crates/argus-trace/src/: lib.rs
docs/: arguscode-six-blocks.md
launch/: README.md  demo-script.md  outreach.md  product-hunt.md  show-hn.md  social-posts.md
scripts/: check-release-version.sh  package-release.sh
site/: index.html  styles.css
