[workspace]
resolver = "2"
members = [
    "crates/argus-trace",
    "crates/argus-core",
    "crates/argus-cli",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
argus-trace = { path = "crates/argus-trace" }
argus-core = { path = "crates/argus-core" }
