[workspace]
resolver = "2"
members = [
    "crates/argus-trace",
    "crates/argus-core",
    "crates/argus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/useargus/argus"
homepage = "https://github.com/useargus/argus"
keywords = ["ai", "agent", "llm", "mcp", "coding-agent"]
categories = ["development-tools", "command-line-utilities"]
rust-version = "1.75"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "io-util", "io-std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
wiremock = "0.6"
argus-trace = { path = "crates/argus-trace" }
argus-core = { path = "crates/argus-core" }
ratatui = "0.29"
