[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Argus CLI — the AI coding agent that never blinks."

[[bin]]
name = "argus"
path = "src/main.rs"

[[bin]]
name = "arguscode"
path = "src/bin/arguscode.rs"

[dependencies]
argus-core.workspace = true
argus-trace.workspace = true
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json = { workspace = true }
toml = "0.8"
ratatui.workspace = true
async-trait.workspace = true
libc.workspace = true
