[package]
name = "argus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Argus core: model-agnostic provider abstraction and the agent loop."

[dependencies]
argus-trace.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
