[package]
name = "argus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
description = "Argus core: model-agnostic provider abstraction and the agent loop."

[dependencies]
argus-trace.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio.workspace = true
libc.workspace = true

[dev-dependencies]
wiremock.workspace = true
